# rust-stm32f4-disco-blinky

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config
.github/workflows/: build-main.yml  rust.yml
src/: main.rs
