[package]
authors = ["RobAl009 <robert.alpha@gmx.de>"]
edition = "2018"
readme = "README.md"
name = "rs-on-f4-disco-test1"
version = "0.0.1"

[dependencies]
cortex-m = ">=0.6.3"
cortex-m-rt = ">=0.6.10"
cortex-m-semihosting = ">=0.3.3"
panic-halt = ">=0.2.0"

[dependencies.stm32f4]
version = ">=0.12.0"
features = ["rt", "stm32f429"]

[dependencies.stm32f4xx-hal]
version = ">=0.8.3"
features = ["rt", "stm32f429"]

[[bin]]
name = "rs-on-f4-disco-test1"
test = false
bench = false

[profile.release]
# Many of these settings are highly recommended or required for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true