[package]
authors = ["aholzbaur <71641117+aholzbaur@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "rust-stm32f4-disco-blinky"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.14.0"
features = ["rt", "stm32f429"]

[dependencies.stm32f4xx-hal]
version = "0.11.1"
features = ["rt", "stm32f429"]

[[bin]]
name = "rust-stm32f4-disco-blinky"
test = false
bench = false

[profile.release]
# Many of these settings are highly recommended or required for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true
